Support NUMAKER_PFM_M2351 for pelion client
1. Override M2351 memory partition and provide custom secure library
   ROM partition: secure 64KiB/non-secure 448KiB
   RAM partition: secure 8KiB/non-secure 88KiB
2. Remove M2351 default secure library from compile list (.mbedignore)
3. Force-include custom secure library into git (.gitignore)
4. With RoT, bootloader and client application must match:
   (1) Insecure (fake) RoT:
       Bootloader/mbed_app.json: ARM_BOOTLOADER_USE_NVSTORE_ROT == 0
       Client application/mbed_app.json: developer-mode == 1
   (2) NVStore (SOTP) RoT:
       Bootloader/mbed_app.json: ARM_BOOTLOADER_USE_NVSTORE_ROT == 1
       Client application/mbed_app.json: developer-mode == 0
5. Change default BlockDevice to NUSD:
   (1) Add component NUSD.
   (2) Override BlockDevice::get_default_instance (MySystemStorage.cpp).
       Required since mbed-cloud-client 2.1.0 (arm_uc_blockdevice_ext)
6. Workable with mbed-cloud-client 2.1.0, but compile failed with 2.2.1
7. Remove stale library FEATURE_COMMON_PAL from feature dependency list (mbed_app.json).
8. Remove usb from compile list (.mbedignore)
9. Need to patch mbed-os:
   (1) Add back support for customizing memory partition
   (2) Fix MBED_RAM_START/MBED_RAM_SIZE symbol generation
   (3) Fix heap init error for bare-metal code

--- a/.mbedignore
+++ b/.mbedignore
@@ -74,3 +74,5 @@ mbed-cloud-client/ns-hal-pal/*
 mbed-cloud-client/sal-stack-nanostack-eventloop/*
 mbed-cloud-client/source/*
 mbed-cloud-client/certificate-enrollment-client/*
+mbed-os/targets/TARGET_NUVOTON/TARGET_M2351/TARGET_NUMAKER_PFM_M2351/TARGET_M23_NS/*
+mbed-os/usb/*
